--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,12 @@
               Link<span class="blue">\n</span>Title
             </span>
           </label>
+          <label class="u-radio">
+            <input type="radio" name="linkFormat" value="link">
+            <span>
+              <span class="blue">Title</span>(richtext)
+            </span>
+          </label>
         </div>
       </div>
     </div>
