--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,11 @@
 </head>
 <body>
   <div class="m-header">
-    <h1><span class="logo blue">[)</span>MDLink</h1>
+    <div class="logo"></div>
+    <div style="display: inline-block;">
+      <h1>MDLink</h1>
+      <p>by <a href="https://github.com/shhider" target="_blank">shhider</a></p>
+    </div>
   </div>
 
   <div class="m-body">
@@ -31,11 +35,9 @@
       <div class="link_ctrl">
         <div class="radio_group">
           <label class="u-radio">
-            <input type="radio" name="linkFormat" value="markdown" checked>
+            <input type="radio" name="linkFormat" value="html-a-link">
             <div class="u-radio-block">
-              <p><span class="blue">[</span>Title<span class="blue">](</span>Link<span class="blue">)</span></p>
-              <br/>
-              <p class="txt-info">* for Markdown</p>
+              <p class="blue" style="text-decoration: underline" title="Link">Title</p>
             </div>
           </label>
           <label class="u-radio">
@@ -45,15 +47,19 @@
               <p>Title</p>
             </div>
           </label>
+          <label class="u-radio">
+            <input type="radio" name="linkFormat" value="markdown" checked>
+            <div class="u-radio-block">
+              <p><span class="blue">[</span>Title<span class="blue">](</span>Link<span class="blue">)</span></p>
+              <br/>
+              <p style="font-size: 10px; color: #999;">* for Markdown</p>
+            </div>
+          </label>
         </div>
       </div>
     </div>
 
     <button id="btnCopy" class="u-btn">Copy to Clipboard</button>
-  </div>
-
-  <div class="m-foot">
-    <p>created by <a href="https://github.com/shhider" target="_blank">shhider</a></p>
   </div>
 
 <script src="./static/js/clipboard.min.js"></script>
