--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
     </div>
     <div class="btn-wrapper">
       <button id="btnCopy" class="u-btn">Copy</button>
+      <div id="btnAlert" class="u-tips"></div>
     </div>
   </div>
 
@@ -66,7 +67,6 @@
 
   </div>
 
-<script src="./static/js/clipboard.min.js"></script>
 <script src="./static/js/mdlink.js"></script>
 </body>
 </html>
